--- a/myweb/templates/navbar.html
+++ b/myweb/templates/navbar.html
@@ -16,6 +16,11 @@
               <a class="nav-link active" aria-current="page" href="{% url 'contact' %}">Contact</a>
             </li>
 
+              {% if request.user.is_authenticated %}
+                   <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'profile' request.user.id %}">Profile</a>
+                </li>
+                {% endif %}
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
