--- a/myweb/base/templates/base/home.html
+++ b/myweb/base/templates/base/home.html
@@ -4,24 +4,5 @@
 
 
 {% block content %}
-<br>
-     <div>
-        <h1>ESHKHI</h1>
-     </div>
-<hr>
-<br>
-    <div style="display: flex;">
-        {% for clothe in clothes %}
-         <div class="card" style="width: 18rem; margin-left: 20px;">
-          <img src="{{ clothe.picture }}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{ clothe.color }}</h5>
-            <p class="card-text">{{ clothe.description |slice:":70" }}</p>
-            <a href="#" class="btn btn-primary">buy now</a>
-          </div>
-        </div>
-        {% endfor %}
-    </div>
-
-
+{% include 'base/clothe.html' %}
 {% endblock %}
