--- a/myweb/templates/navbar.html
+++ b/myweb/templates/navbar.html
@@ -20,6 +20,13 @@
                    <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="{% url 'profile' request.user.id %}">Profile</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'logaut'  %}">Logaut</a>
+                </li>
+                {% else %}
+                  <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'login'  %}">Login</a>
+                </li>
                 {% endif %}
           </ul>
           <form class="d-flex" role="search" action="">
