--- a/myweb/base/templates/base/clothe.html
+++ b/myweb/base/templates/base/clothe.html
@@ -40,7 +40,16 @@
               <div class="card-body">
                 <h5 class="card-title">{{ clothe.color }}</h5>
                 <p class="card-text">{{ clothe.description |slice:":70" }}</p>
-                <a href="#" class="btn btn-primary">buy now</a>
+
+                {% if  request.user.is_authenticated %}
+                    <a href="#" class="btn btn-primary"> Buy now  </a>
+                    {% if clothe in request.user.clothes.all %}
+                        <a href="{% url 'delete' clothe.id %}" class="btn btn-primary"> Delete </a>
+                    {% else %}
+
+                        <a href="{% url 'adding' clothe.id %}" class="btn btn-primary"> Add </a>
+                    {% endif %}
+                {% endif %}
               </div>
             </div>
             {% endfor %}
